chore: remove header

--- a/docs/guide/ecosystem.mdx
+++ b/docs/guide/ecosystem.mdx
@@ -2,8 +2,6 @@
 description: RSS3 ecosystem
 ---
 
-import Ecosystem from "../../src/components/ecosystem/ecosystem"
-
-# Ecosystem
+import Ecosystem from "../../src/components/ecosystem/ecosystem";
 
 <Ecosystem />
