--- a/docs/guide/roadmap.mdx
+++ b/docs/guide/roadmap.mdx
@@ -4,61 +4,121 @@ description: RSS3 in the future
 
 # Roadmap
 
-import { Badge, Card, Timeline } from 'antd';
-import 'antd/dist/antd.css';
+import { Badge, Card, Timeline } from "antd";
+import "antd/dist/antd.css";
 
 <BrowserOnly>
-    <Timeline>
-        <Timeline.Item>
-          <Badge.Ribbon text="Mar 2022? -">
-            <Card>
-              <h3>RSS3 God</h3>
-              <p>A fully decentralized implementation in Go</p>
-              <p>Under Planning</p>
-              <img src="/img/roadmap/architecture.png"/>
-              <p><a target="_blank" href="/assets/RSS3-Whitepaper.pdf">Open in Whitepaper</a></p>
-            </Card>
-          </Badge.Ribbon>
-        </Timeline.Item>
-        <Timeline.Item>
-          <Badge.Ribbon text="Jan 2022 - Mar 2022?">
-            <Card>
-              <h3>RSS3 PreGod</h3>
-              <p>A close to decentralized implementation of protocol v0.4.0 with full indexing function in Go</p>
-              <p>Under Development on <a target="_blank" href="https://github.com/NaturalSelectionLabs/RSS3-PreGod">GitHub</a></p>
-              <p>Technical architecture diagram:</p>
-              <iframe style={{"border":"none"}} width="100%" height="450" src="https://whimsical.com/embed/PHXfjqFjYrecd6EsnvgcXx"></iframe>
-              <p><a target="_blank" href="https://whimsical.com/pregod-PHXfjqFjYrecd6EsnvgcXx">Open in Whimsical</a></p>
-            </Card>
-          </Badge.Ribbon>
-        </Timeline.Item>
-        <Timeline.Item>
-          <Badge.Ribbon text="Jul 2021 - Nov 2021">
-            <Card>
-              <h3>RSS3 PreNode</h3>
-              <p>A new centralised implementation of protocol v0.3.0 and v0.3.1 with basic assets indexing and items indexing function in Node.js</p>
-              <p>Under Maintenance on <a target="_blank" href="https://github.com/NaturalSelectionLabs/RSS3-Pre-Node">GitHub (private repo)</a></p>
-            </Card>
-          </Badge.Ribbon>
-        </Timeline.Item>
-        <Timeline.Item>
-          <Badge.Ribbon text="Jul 2021 - Nov 2021">
-            <Card>
-              <h3>RSS3 Hub Next</h3>
-              <p>A simple centralised implementation of protocol v0.2.0 with basic assets indexing function based on RSS3 Hub in Node.js</p>
-              <p>Discontinued on <a target="_blank" href="https://github.com/NaturalSelectionLabs/RSS3-Hub-Next">GitHub (private repo)</a></p>
-            </Card>
-          </Badge.Ribbon>
-        </Timeline.Item>
-        <Timeline.Item>
-          <Badge.Ribbon text="May 2021 - Jul 2021">
-            <Card>
-              <h3>RSS3 Hub</h3>
-              <p>A simple centralised implementation of protocol v0.1.0 and v0.1.1 in Node.js</p>
-              <p>Discontinued on <a target="_blank" href="https://github.com/NaturalSelectionLabs/RSS3-Hub">GitHub (private repo)</a></p>
-            </Card>
-          </Badge.Ribbon>
-        </Timeline.Item>
+  <Timeline>
+    <Timeline.Item color="blue">
+      <Badge.Ribbon text="Mar 2022? -">
+        <Card>
+          <h3>RSS3 God</h3>
+          <p>A fully decentralized implementation in Go</p>
+          <p>Under Planning</p>
+          <img src="/img/roadmap/architecture.png" />
+          <p>
+            <a target="_blank" href="/assets/RSS3-Whitepaper.pdf">
+              Open in Whitepaper
+            </a>
+          </p>
+        </Card>
+      </Badge.Ribbon>
+    </Timeline.Item>
+    <Timeline.Item color="blue">
+      <Badge.Ribbon text="Jan 2022 - Mar 2022?">
+        <Card>
+          <h3>RSS3 PreGod</h3>
+          <p>
+            A close to decentralized implementation of protocol v0.4.0 with full
+            indexing function in Go
+          </p>
+          <p>
+            Under Development on{" "}
+            <a
+              target="_blank"
+              href="https://github.com/NaturalSelectionLabs/RSS3-PreGod"
+            >
+              GitHub
+            </a>
+          </p>
+          <p>Technical architecture diagram:</p>
+          <iframe
+            style={{ border: "none" }}
+            width="100%"
+            height="450"
+            src="https://whimsical.com/embed/PHXfjqFjYrecd6EsnvgcXx"
+          ></iframe>
+          <p>
+            <a
+              target="_blank"
+              href="https://whimsical.com/pregod-PHXfjqFjYrecd6EsnvgcXx"
+            >
+              Open in Whimsical
+            </a>
+          </p>
+        </Card>
+      </Badge.Ribbon>
+    </Timeline.Item>
+    <Timeline.Item color="blue">
+      <Badge.Ribbon text="Jul 2021 - Nov 2021">
+        <Card>
+          <h3>RSS3 PreNode</h3>
+          <p>
+            A new centralised implementation of protocol v0.3.0 and v0.3.1 with
+            basic assets indexing and items indexing function in Node.js
+          </p>
+          <p>
+            Under Maintenance on{" "}
+            <a
+              target="_blank"
+              href="https://github.com/NaturalSelectionLabs/RSS3-Pre-Node"
+            >
+              GitHub (private repo)
+            </a>
+          </p>
+        </Card>
+      </Badge.Ribbon>
+    </Timeline.Item>
+    <Timeline.Item color="blue">
+      <Badge.Ribbon text="Jul 2021 - Nov 2021">
+        <Card>
+          <h3>RSS3 Hub Next</h3>
+          <p>
+            A simple centralised implementation of protocol v0.2.0 with basic
+            assets indexing function based on RSS3 Hub in Node.js
+          </p>
+          <p>
+            Discontinued on{" "}
+            <a
+              target="_blank"
+              href="https://github.com/NaturalSelectionLabs/RSS3-Hub-Next"
+            >
+              GitHub (private repo)
+            </a>
+          </p>
+        </Card>
+      </Badge.Ribbon>
+    </Timeline.Item>
+    <Timeline.Item color="blue">
+      <Badge.Ribbon text="May 2021 - Jul 2021">
+        <Card>
+          <h3>RSS3 Hub</h3>
+          <p>
+            A simple centralised implementation of protocol v0.1.0 and v0.1.1 in
+            Node.js
+          </p>
+          <p>
+            Discontinued on{" "}
+            <a
+              target="_blank"
+              href="https://github.com/NaturalSelectionLabs/RSS3-Hub"
+            >
+              GitHub (private repo)
+            </a>
+          </p>
+        </Card>
+      </Badge.Ribbon>
+    </Timeline.Item>
   </Timeline>
 </BrowserOnly>
 
