feat: add RSS3 Eco

--- a/docs/guide/ecosystem.mdx
+++ b/docs/guide/ecosystem.mdx
@@ -1,7 +1,10 @@
 ---
+title: Ecosystem
 description: RSS3 ecosystem
 ---
 
 import Ecosystem from "../../src/components/ecosystem/ecosystem";
+
+For information on collaborations, please visit [RSS3-Eco](https://ecosystem.rss3.io/).
 
 <Ecosystem />
