update: blog links

--- a/docs/events.mdx
+++ b/docs/events.mdx
@@ -192,7 +192,7 @@ Etherscan
 <Link className="button button--primary button--md" href="https://rft.rss3.io/">
 Website
 </Link>
-<Link className="button button--secondary button--md" href="https://rss3.notion.site/6-RSS3-Fruit-Token-901ab03737e2452f999f31a5976be821">
+<Link className="button button--secondary button--md" href="https://blog.rss3.io/6-rss3-fruit-token">
 Blog
 </Link>
 <Link className="button button--secondary button--md" href="https://opensea.io/collection/rss-fruits-token">
