--- a/docs/guide/roadmap.mdx
+++ b/docs/guide/roadmap.mdx
@@ -87,4 +87,4 @@ import "antd/dist/antd.css";
 Extended Reading:
 
 - [RSS3 Whitepaper](/assets/RSS3-Whitepaper.pdf)
-- [RSS3 Roadmap](https://rss3.notion.site/11-The-RSS3-Roadmap-3c1c4dce0c3f4096880e930371a636a6)
+- [RSS3 Roadmap](https://blog.rss3.io/17-the-rss3-roadmap)
