feat: API versioning and linting

--- a/docs/events.mdx
+++ b/docs/events.mdx
@@ -2,9 +2,9 @@
 title: '🐝 Events'
 ---
 
-import Link from "@docusaurus/Link";
+import Link from '@docusaurus/Link';
 
-import styles from "./events.module.css";
+import styles from './events.module.css';
 
 ## RSS3 Genesis Avatar NFT
 
@@ -15,21 +15,28 @@ import styles from "./events.module.css";
 </div>
 
 <div className={styles.container}>
-<Link className="button button--primary button--md" href="https://rss3.events/avatar">
-Website
-</Link>
-<Link className="button button--secondary button--md" href="https://twitter.com/rss3_/status/1504352329750917121">
-Twitter
-</Link>
-<Link className="button button--secondary button--md" href="https://opensea.io/collection/the-genesis-rss3-avatar-nft">
-OpenSea
-</Link>
-<Link className="button button--secondary button--md" href="https://etherscan.io/address/0x5452c7fb99d99fab3cc1875e9da9829cb50f7a13">
-Etherscan
-</Link>
+    <Link className='button button--primary button--md' href='https://rss3.events/avatar'>
+        Website
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://twitter.com/rss3_/status/1504352329750917121'>
+        Twitter
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://opensea.io/collection/the-genesis-rss3-avatar-nft'>
+        OpenSea
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://etherscan.io/address/0x5452c7fb99d99fab3cc1875e9da9829cb50f7a13'>
+        Etherscan
+    </Link>
 </div>
 
 ---
+
 ## RSS3 Whitepaper
 
 <div className="text--center">
@@ -39,21 +46,30 @@ Etherscan
 </div>
 
 <div className={styles.container}>
-<Link className="button button--primary button--md" href="https://rss3.events/whitepaper-nft">
-Website
-</Link>
-<Link className="button button--secondary button--md" href="https://twitter.com/rss3_/status/1483620420473724929">
-Twitter
-</Link>
-<Link className="button button--secondary button--md" href="https://opensea.io/collection/rss3-whitepaper">
-OpenSea
-</Link>
-<Link className="button button--secondary button--md" href="https://etherscan.io/address/0xb9619cf4f875cdf0e3ce48b28a1c725bc4f6c0fb">
-Etherscan
-</Link>
+    <Link
+        className='button button--primary button--md'
+        href='https://rss3.events/whitepaper-nft'>
+        Website
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://twitter.com/rss3_/status/1483620420473724929'>
+        Twitter
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://opensea.io/collection/rss3-whitepaper'>
+        OpenSea
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://etherscan.io/address/0xb9619cf4f875cdf0e3ce48b28a1c725bc4f6c0fb'>
+        Etherscan
+    </Link>
 </div>
 
 ---
+
 ## RSS3 X JIKE
 
 <div className="text--center">
@@ -63,27 +79,35 @@ Etherscan
 </div>
 
 <div className={styles.container}>
-<Link className="button button--primary button--md" href="https://rss3.events/jike-nft">
-Website
-</Link>
-<Link className="button button--secondary button--md" href="https://twitter.com/rss3_/status/1481491318883106817">
-Twitter
-</Link>
-<Link className="button button--secondary button--md" href="https://opensea.io/collection/rss3-x-jike">
-OpenSea
-</Link>
-<Link className="button button--secondary button--md" href="https://polygonscan.com/address/0x30ecef47957f6823c6b2929747bc19d765efee26">
-Etherscan
-</Link>
+    <Link
+        className='button button--primary button--md'
+        href='https://rss3.events/jike-nft'>
+        Website
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://twitter.com/rss3_/status/1481491318883106817'>
+        Twitter
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://opensea.io/collection/rss3-x-jike'>
+        OpenSea
+    </Link>
+    <Link
+        className='button button--secondary button--md'
+        href='https://polygonscan.com/address/0x30ecef47957f6823c6b2929747bc19d765efee26'>
+        Etherscan
+    </Link>
 </div>
 
 ---
+
 ## Web3 Wrapped 2021
 
 <div className="text--center">
 
 ![](/img/events/web3wrapped.jpeg)
-
 
 </div>
 <div className={styles.container}>
@@ -102,12 +126,12 @@ Etherscan
 </div>
 
 ---
+
 ## Mask Network X RSS3
 
 <div className="text--center">
 
 ![](/img/events/mask.jpeg)
-
 
 </div>
 <div className={styles.container}>
@@ -123,6 +147,7 @@ Polygonscan
 </div>
 
 ---
+
 ## RSS3 - Part of the Family
 
 <div className="text--center">
@@ -143,7 +168,9 @@ Polygonscan
 </div>
 
 ---
+
 ## RSS3 Fully Supports POAP
+
 <div className="text--center">
 
 ![](/img/events/poap.png)
@@ -162,12 +189,12 @@ POAP Gallery
 </div>
 
 ---
+
 ## $PASS
 
 <div className="text--center">
 
 ![](/img/events/pass.png)
-
 
 </div>
 <div className={styles.container}>
@@ -180,12 +207,12 @@ Etherscan
 </div>
 
 ---
+
 ## RSS Fruits Token
 
 <div className="text--center">
 
 ![](/img/events/fruit.gif)
-
 
 </div>
 <div className={styles.container}>
