--- a/docs/guide/ecosystem.mdx
+++ b/docs/guide/ecosystem.mdx
@@ -3,7 +3,7 @@ title: Ecosystem
 description: RSS3 ecosystem
 ---
 
-import Ecosystem from "@site/src/components/ecosystem/ecosystem";
+import Ecosystem from '@site/src/components/ecosystem/ecosystem';
 
 For information on collaborations, please visit [RSS3-Eco](https://ecosystem.rss3.io/).
 
