--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -2,7 +2,7 @@
 description: An introduction to PreGod API
 ---
 
-import styles from "./introduction.module.css";
+import styles from './introduction.module.css';
 
 # Introduction
 
@@ -27,10 +27,10 @@ To ensure the usability, we may introduce rate limiting in the future.
 
 ## Data Sources Supported
 
-- Ethereum
-- Polygon
-- BNB Smart Chain
-- zkSync
-- Mirror Entry
-- Gitcoin Contribution
-- Crossbell
+-   Ethereum
+-   Polygon
+-   BNB Smart Chain
+-   zkSync
+-   Mirror Entry
+-   Gitcoin Contribution
+-   Crossbell
