--- a/versioned_docs/version-v0.4.0/guide/partnership.mdx
+++ b/versioned_docs/version-v0.4.0/guide/partnership.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Partnership'
-description: "RSS3 X Partners"
+description: 'RSS3 X Partners'
 ---
 
-import Investor from "@site/src/components/investor/investor"
+import Investor from '@site/src/components/investor/investor';
 
 ## Investors
 
