feat: update openapi definition

--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -6,15 +6,13 @@ import styles from './introduction.module.css';
 
 # Introduction
 
-RSS3 PreGod marks a milestone towards our ultimate goal, a fully decentralized service that provides the Web3 feed of any instance.
+PreGod provides a set of simple-to-use APIs to access the feed of Web3. Currently, the stable version is v1.0.0. The source code is [available on GitHub](https://github.com/NaturalSelectionLabs/PreGod).
 
-As an implementation of the RSS3 Protocol, PreGod provides a set of simple-to-use APIs to access the feed of Web3. Currently, the stable version is [![RSS3](https://badge.rss3.workers.dev/?version=v0.4.0)](https://github.com/NaturalSelectionLabs/RSS3/blob/main/versions/v0.4.0.md). The source code is [available on GitHub](https://github.com/NaturalSelectionLabs/RSS3-PreGod).
-
-The release of PreGod v0.4.0 also means that PreNode v0.3.1 will be switched to a maintenance-only state, aiming to support the existing applications that rely on it.
+The release of PreGod v1.0.0 also means that previous versions will have a change of state, see [versions](/versions).
 
 ## API endpoint
 
-Current stable endpoint: <https://pregod.rss3.dev/v0.4.0>
+Current stable endpoint: <https://pregod.rss3.dev/v1.0.0>
 
 > While the use of all RSS3 APIs is completely free, we kindly request that you include our logo with a link back to either our home page or the specific content URL on our website. For more information, please refer to our [branding guidelines](/docs/misc/branding).
 
@@ -27,10 +25,38 @@ To ensure the usability, we may introduce rate limiting in the future.
 
 ## Data Sources Supported
 
--   Ethereum
--   Polygon
--   BNB Smart Chain
--   zkSync
--   Mirror Entry
--   Gitcoin Contribution
--   Crossbell
+### List of Networks
+
+| Network                 | Tag    |
+| ----------------------- | ------ |
+| Ethereum                | All    |
+| Ethereum Classic        | All    |
+| BSC(inance Smart Chain) | All    |
+| Polygon                 | All    |
+| zkSync                  | All    |
+| xDai                    | All    |
+| Arweave                 | Social |
+| Crossbell               | All    |
+
+### List of Platforms
+
+| Platform  | Network                              | Tag                 |
+| --------- | ------------------------------------ | ------------------- |
+| Crossbell | Crossbell                            | Collectible, Social |
+| Mirror    | Arweave                              | Social              |
+| Lens      | Polygon                              | Social              |
+| POAP      | Ethereum                             | Collectible         |
+| Gitcoin   | Ethereum, Polygon, zkSync            | Donation            |
+| Snapshot  | All (except Arweave)                 | Governance          |
+| DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | Exchange            |
+
+### List of Tags and corresponding Types
+
+| Tag         | Type                                                  |
+| ----------- | ----------------------------------------------------- |
+| Transaction | transfer, mint, burn, cancel                          |
+| Exchange    | withdraw, deposit, swap                               |
+| Collectible | trade, mint, burn , POAP                              |
+| Social      | post, comment, share, profile, follow, unfollow, link |
+| Donation    | launch, donate                                        |
+| Governance  | propose, vote                                         |
