--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -27,16 +27,16 @@ To ensure the usability, we may introduce rate limiting in the future.
 
 ### List of Networks
 
-| Network                 | Tag    |
-| ----------------------- | ------ |
-| Ethereum                | All    |
-| Ethereum Classic        | All    |
-| BSC(inance Smart Chain) | All    |
-| Polygon                 | All    |
-| zkSync                  | All    |
-| xDai                    | All    |
-| Arweave                 | Social |
-| Crossbell               | All    |
+| Network                   | Tag    |
+| ------------------------- | ------ |
+| Ethereum                  | All    |
+| Ethereum Classic          | All    |
+| BSC (Binance Smart Chain) | All    |
+| Polygon                   | All    |
+| zkSync                    | All    |
+| xDai                      | All    |
+| Arweave                   | Social |
+| Crossbell                 | All    |
 
 ### List of Platforms
 
