feat: FAQ and Branding pages

--- a/versioned_docs/version-v0.4.0/product/PreGod/introduction.mdx
+++ b/versioned_docs/version-v0.4.0/product/PreGod/introduction.mdx
@@ -16,7 +16,7 @@ The release of PreGod v0.4.0 also means that PreNode v0.3.1 will be switched to 
 
 Current stable endpoint: <https://pregod.rss3.dev/v0.4.0>
 
-> While the use of all RSS3 APIs is completely free, we kindly request that you include our logo with a link back to either our home page or the specific content URL on our website. For more information, please refer to our [branding guidelines](/docs/misc/branding).
+> While the use of all RSS3 APIs is completely free, we kindly request that you include our logo with a link back to either our home page or the specific content URL on our website. For more information, please refer to our [branding guidelines](/misc/branding).
 
 ![powered by RSS3](../img/poweredByRSS3.png)
 ![powered by RSS3](../img/poweredByRSS3Dark.png)
