feat: update PreGod introduction

--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -6,7 +6,7 @@ import styles from './introduction.module.css';
 
 # Introduction
 
-PreGod provides a set of simple-to-use APIs to access the feed of Web3. Currently, the stable version is v1.0.0. The source code is [available on GitHub](https://github.com/NaturalSelectionLabs/PreGod).
+PreGod provides a set of simple-to-use APIs to access the feed of Web3. Currently, the stable version is v1.0.0. The source code will be made [available on GitHub](https://github.com/NaturalSelectionLabs/PreGod) soon.
 
 The release of PreGod v1.0.0 also means that previous versions will have a change of state, see [versions](/versions).
 
@@ -27,36 +27,36 @@ To ensure the usability, we may introduce rate limiting in the future.
 
 ### List of Networks
 
-| Network                   | Tag    |
-| ------------------------- | ------ |
-| Ethereum                  | All    |
-| Ethereum Classic          | All    |
-| BSC (Binance Smart Chain) | All    |
-| Polygon                   | All    |
-| zkSync                    | All    |
-| xDai                      | All    |
-| Arweave                   | Social |
-| Crossbell                 | All    |
+| Network                   | Tag         |
+| ------------------------- | ----------- |
+| Ethereum                  | All         |
+| Ethereum Classic          | transaction |
+| BSC (Binance Smart Chain) | All         |
+| Polygon                   | All         |
+| zkSync                    | All         |
+| xDai                      | All         |
+| Arweave                   | social      |
+| Crossbell                 | All         |
 
 ### List of Platforms
 
 | Platform  | Network                              | Tag                 |
 | --------- | ------------------------------------ | ------------------- |
-| Crossbell | Crossbell                            | Collectible, Social |
-| Mirror    | Arweave                              | Social              |
-| Lens      | Polygon                              | Social              |
-| POAP      | Ethereum                             | Collectible         |
-| Gitcoin   | Ethereum, Polygon, zkSync            | Donation            |
-| Snapshot  | All (except Arweave)                 | Governance          |
-| DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | Exchange            |
+| Crossbell | Crossbell                            | collectible, social |
+| Mirror    | Arweave                              | social              |
+| Lens      | Polygon                              | social              |
+| POAP      | Ethereum                             | collectible         |
+| Gitcoin   | Ethereum, Polygon, zkSync            | donation            |
+| Snapshot  | All (except Arweave)                 | governance          |
+| DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | exchange            |
 
 ### List of Tags and corresponding Types
 
 | Tag         | Type                                                  |
 | ----------- | ----------------------------------------------------- |
-| Transaction | transfer, mint, burn, cancel                          |
-| Exchange    | withdraw, deposit, swap                               |
-| Collectible | trade, mint, burn , POAP                              |
-| Social      | post, comment, share, profile, follow, unfollow, link |
-| Donation    | launch, donate                                        |
-| Governance  | propose, vote                                         |
+| transaction | transfer, mint, burn, cancel                          |
+| exchange    | withdraw, deposit, swap                               |
+| collectible | trade, mint, burn , POAP                              |
+| social      | post, comment, share, profile, follow, unfollow, link |
+| donation    | launch, donate                                        |
+| governance  | propose, vote                                         |
