--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -16,8 +16,8 @@ Current stable endpoint: <https://pregod.rss3.dev/v1.0.0>
 
 > While the use of all RSS3 APIs is completely free, we kindly request that you include our logo with a link back to either our home page or the specific content URL on our website. For more information, please refer to our [branding guidelines](/misc/branding).
 
-![powered by RSS3](../img/poweredByRSS3.png)
-![powered by RSS3](../img/poweredByRSS3Dark.png)
+![powered by RSS3](../img/poweredByRSS3.svg)
+![powered by RSS3](../img/poweredByRSS3Dark.svg)
 
 :::info
 To ensure the usability, we may introduce rate limiting in the future.
