feat: update transaction type

--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -54,7 +54,7 @@ To ensure the usability, we may introduce rate limiting in the future.
 
 | Tag         | Type                                                  |
 | ----------- | ----------------------------------------------------- |
-| transaction | transfer, mint, burn, cancel                          |
+| transaction | transfer, mint, burn, self                            |
 | exchange    | withdraw, deposit, swap                               |
 | collectible | trade, mint, burn , POAP                              |
 | social      | post, comment, share, profile, follow, unfollow, link |
