feat: update info in tutorials

--- a/docs/product/PreGod/Tutorials/cookbook.mdx
+++ b/docs/product/PreGod/Tutorials/cookbook.mdx
@@ -1,9 +1,13 @@
 ---
-title: A cookbook
+title: A cookbook for PreGod v0.4.0
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+
+:::info
+A cookbook for v1.0.0 is currently being drafted, stay tuned.
+:::
 
 The cookbook demonstrates some common use case scenarios of the APIs. Take these examples for a spin yourself for inspiration getting started with PreGod.
 
