--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -20,7 +20,7 @@ Current stable endpoint: <https://pregod.rss3.dev/v1.0.0>
 ![powered by RSS3](../img/poweredByRSS3Dark.svg)
 
 :::info
-To ensure the usability, we may introduce rate limiting in the future.
+To ensure usability for everyone, we limit request to 600 per minute. The limit will gradually increase as we see fit.
 :::
 
 ## Data Sources Supported
