doc: POAP on xDai

--- a/docs/product/PreGod/introduction.mdx
+++ b/docs/product/PreGod/introduction.mdx
@@ -45,7 +45,7 @@ To ensure usability for everyone, we limit request to 600 per minute. The limit 
 | Crossbell | Crossbell                            | collectible, social |
 | Mirror    | Arweave                              | social              |
 | Lens      | Polygon                              | social              |
-| POAP      | Ethereum                             | collectible         |
+| POAP      | Ethereum, xDai                       | collectible         |
 | Gitcoin   | Ethereum, Polygon, zkSync            | donation            |
 | Snapshot  | All (except Arweave)                 | governance          |
 | DEX, CEX  | Ethereum, Polygon, BSC, zkSync, xDai | exchange            |
