--- a/versioned_docs/version-v1.0.0/product/PreGod/introduction.mdx
+++ b/versioned_docs/version-v1.0.0/product/PreGod/introduction.mdx
@@ -2,6 +2,8 @@
 description: An introduction to PreGod API
 ---
 
+import styles from './introduction.module.css';
+
 # Introduction
 
 PreGod provides a set of simple-to-use APIs to access the feed of Web3. Currently, the stable version is v1.0.0. The source code will be made [available on GitHub](https://github.com/NaturalSelectionLabs/PreGod) soon.
