--- a/docs/product/PreGod/datasource.mdx
+++ b/docs/product/PreGod/datasource.mdx
@@ -4,6 +4,8 @@ description: Data Source Supported by PreGod
 
 # Data and Filtering
 
+PreGod supports the filtering of data using multiple filtering conditions, some typical use cases include by `network`, `platform`, `tag`, and `type`.
+
 ### List of Networks
 
 | Network                   | Tag         |
@@ -31,11 +33,11 @@ description: Data Source Supported by PreGod
 
 ### List of Tags and corresponding Types
 
-| Tag         | Type                                                  |
-| ----------- | ----------------------------------------------------- |
-| transaction | transfer, mint, burn, self                            |
-| exchange    | withdraw, deposit, swap                               |
-| collectible | trade, mint, burn , POAP                              |
-| social      | post, comment, share, profile, follow, unfollow, link |
-| donation    | launch, donate                                        |
-| governance  | propose, vote                                         |
+| Tag         | Type                                                          |
+| ----------- | ------------------------------------------------------------- |
+| transaction | transfer, mint, burn, self                                    |
+| exchange    | withdraw, deposit, swap                                       |
+| collectible | trade, mint, burn, poap, self                                 |
+| social      | post, revise, comment, share, profile, follow, unfollow, link |
+| donation    | launch, donate                                                |
+| governance  | propose, vote                                                 |
