--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -12,7 +12,7 @@ PreGod enables developers to swiftly plug in the data returned by its APIs, with
 Below you will see a list of types and the corresponding UMS.
 
 :::info
-This page is still being revised, the UMS listed above may subject to future changes.
+This page is still being revised, the UMS listed below may subject to future changes.
 :::
 
 ## Transaction
