--- a/docs/product/PreGod/unified_metadata_schemas.mdx
+++ b/docs/product/PreGod/unified_metadata_schemas.mdx
@@ -139,7 +139,7 @@ TBA
             "mime_type": "image/png"
         }
     ],
-    "type_on_platform": "Post"
+    "type_on_platform": ["Post"]
 }
 ```
 
@@ -155,10 +155,11 @@ TBA
 {
     "body": "RSS3 is building a Lens integration!",
     "target": {
+        "title": "Yo! from RSS3! https://rss3.io",
         "body": "Yo! from RSS3! https://rss3.io",
-        "type_on_platform": "Post"
+        "type_on_platform": ["Post"]
     },
-    "type_on_platform": "Comment"
+    "type_on_platform": ["Comment"]
 }
 ```
 
@@ -176,7 +177,9 @@ TBA
     "source": "crossbell",
     "network": "crossbell",
     "platform": "",
-    "profile_uri": ["ipfs://QmSX9QiwjTGBk5m22UscTg3vrbMwUfFsmxVzMH57hkPD5U/1021.png"]
+    "profile_uri": ["ipfs://QmSX9QiwjTGBk5m22UscTg3vrbMwUfFsmxVzMH57hkPD5U/1021.png"],
+    "banner_uri": [],
+    "social_uri": []
 }
 ```
 
@@ -240,7 +243,7 @@ TBA
 
 ```json
 {
-    "type_on_platform": "proposal",
+    "type_on_platform": ["proposal"],
     "id": "123",
     "title": "some agenda",
     "body": " description of the proposal",
@@ -248,7 +251,7 @@ TBA
     "startAt": "2022-01-01T15:00:00Z",
     "endAt": "2022-01-02T15:00:00Z"，
     "organization": {
-      "type_on_platform": "charity",
+      "type_on_platform": ["charity"],
       "id": "8818",
       "name": "some charity",
       "about": " description of the organization"
@@ -263,10 +266,10 @@ TBA
 
 ```json
 {
-    "type_on_platform": "vote",
+    "type_on_platform": ["vote"],
     "choice": "1",
     "proposal": {
-        "type_on_platform": "proposal",
+        "type_on_platform": ["proposal"],
         "id": "123",
         "title": "some agenda",
         "body": " description of the proposal",
@@ -274,7 +277,7 @@ TBA
         "startAt": "2022-01-01T15:00:00Z",
         "endAt": "2022-01-02T15:00:00Z"，
         "organization": {
-          "type_on_platform": "charity",
+          "type_on_platform": ["charity"],
           "id": "8818",
           "name": "some charity",
           "about": " description of the organization"
